Few different improvements and fixes

--- a/views/results.pug
+++ b/views/results.pug
@@ -29,7 +29,7 @@ block content
 					else
 						td
 	p.
-		Starting score was #{match.starting_score}, and a total of XXX darts were thrown by #{match.players.length} players
+		Starting score was #{match.startingScore}, and a total of XXX darts were thrown by #{match.players.length} players
 
 	table(class='table table-striped table-bordered')
 		thead
