--- a/views/index.pug
+++ b/views/index.pug
@@ -21,7 +21,7 @@ block content
 								label(class='form-check-label')= player.name
 
 					div(class='form-group')
-						label(for='matchTypeSelect') Match Type
+						label(for='matchTypeSelect') Starting Score
 						select(class='form-control' name='matchType' id='matchTypeSelect')
 							option 301
 							option 501
@@ -29,7 +29,7 @@ block content
 					div(class='form-group')
 						label(for='matchStakeSelect') Match Stake
 						select(class='form-control' name='matchStake' id='matchStakeSelect')
-							option(value=undefined) 
+							option(value=undefined) - 
 							option Cake
 							option Beer
 
