--- a/views/owes.pug
+++ b/views/owes.pug
@@ -4,6 +4,7 @@ block scripts
 	script.
 		$(function() {
 			$('#showPaybackModalButton').click(function() {
+				$('#addPaybackSuccessAlert').hide();
 				$('#addPaybackFailedAlert').hide();
 			});
 
@@ -14,14 +15,17 @@ block scripts
 					data: $('#paybackForm').serialize(),
 					contentType: 'application/x-www-form-urlencoded',
 					success: function(response) {
-						location.reload();
+						$('#registerPaybackModal').modal('toggle');
+						var alert = $('#addPaybackSuccessAlert');
+						alert.show();
+						alert.text('Unable to add payback. ' + error.responseText);
 					},
 					error: function(error) {
 						console.log(error);
 
 						var alert = $('#addPaybackFailedAlert');
 						alert.show();
-						alert.text('Unable to add payback, ' + error.responseText);
+						alert.text('Unable to add payback. ' + error.responseText);
 
 						$('#registerPaybackModal').modal('toggle');
 					}
@@ -32,6 +36,8 @@ block scripts
 block content
 	div(id='addPaybackFailedAlert' class='alert alert-danger' role='alert' hidden='true').
 		Unable to add payback. See log for details
+	div(id='addPaybackSuccessAlert' class='alert alert-success' role='alert' hidden='true').
+		Payback successfully registered
 
 	h2 Owes
 	p.
