--- a/views/playerStatistics.pug
+++ b/views/playerStatistics.pug
@@ -13,7 +13,7 @@ block content
 					th Overall PPD
 			tbody
 					tr
-						td= player.gamesPlayed
-						td= player.gamesWon
-						td= player.gamesPlayed == 0 ? 0 : (player.gamesWon / player.gamesPlayed).toFixed(2)
+						td= player.games_played
+						td= player.games_won
+						td= player.games_played == 0 ? 0 : (player.games_won / player.games_played).toFixed(2)
 						td= player.ppd
