Styling changes to match score_selector table

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -14,3 +14,19 @@
     color: black;
     border: 2px solid #e7e7e7;
 }
+
+#score_selector_table {
+	border-spacing: 0px;
+
+
+}
+
+#score_selector_table td {
+	padding: 0px;
+	border: 1px solid #000;
+}
+#score_selector_table button {
+	border: 0;
+	border-radius: 0;
+	line-height: 0.8;
+}
