--- a/public/css/site.css
+++ b/public/css/site.css
@@ -32,18 +32,11 @@
 	padding: 10px;
 }
 
-#thrown_table td {
-	padding: 0px;
-}
-#thrown_table button {
-	border: 0;
-	border-radius: 0;
-	line-height: 0.8;
-}
-
 #score_selector_table label {
     display: block;
     text-align: center;
+    border-radius: 0;
+    margin: 0;
 }
 
 a:hover {
