--- a/views/match.pug
+++ b/views/match.pug
@@ -7,7 +7,7 @@ block scripts
 			var scores = { };
 
 			$( document ).ready(function() {
-			    window.darts_thrown = 0;
+				window.darts_thrown = 0;
 			});
 
 			$('#score_selector_table .throw_buttons :button').click(function () {
@@ -26,7 +26,9 @@ block scripts
 					alert('Please submit previous score!');
 					return;
 				}
+				var multiplier = $(this).data('multiplier');
 				dart.text($(this).attr('title'));
+				dart.attr('data-multiplier', multiplier);
 
 				var currentPlayer = $('#current_player');
 				var currentPlayerScore = parseInt(currentPlayer.text());
@@ -38,18 +40,27 @@ block scripts
 			});
 
 			$('#submitScoreButton').click(function() {
-				var firstScoreNumeric = parseInt($('#first').text());
-				var secondScoreNumeric = parseInt($('#second').text());
-				var thirdScoreNumeric = parseInt($('#third').text());
+				var firstScoreNumeric = parseInt($('#first').text() / $('#first').attr('data-multiplier'));
+				var secondScoreNumeric = parseInt($('#second').text() / $('#second').attr('data-multiplier'));
+				var thirdScoreNumeric = parseInt($('#third').text() / $('#third').attr('data-multiplier'));
+				var firstScoreMultiplier = parseInt($('#first').attr('data-multiplier'));
+				var secondScoreMultiplier = parseInt($('#second').attr('data-multiplier'));
+				var thirdScoreMultiplier = parseInt($('#third').attr('data-multiplier'));
 
-				var match = $(this).data('match');
+				var matchId = $(this).data('match-id');
+				var currentPlayerId = $(this).data('current-player-id');
+				var playersInMatch = $(this).data('players-in-match');
 
 				var data = JSON.stringify({
-					'matchId' : match._id,
-					'playerId' : match.currentPlayer,
+					'matchId' : matchId,
+					'playerId' : currentPlayerId,
 					'firstDart' : firstScoreNumeric,
 					'secondDart' : secondScoreNumeric,
-					'thirdDart' : thirdScoreNumeric
+					'thirdDart' : thirdScoreNumeric,
+					'firstDartMultiplier': firstScoreMultiplier,
+					'secondDartMultiplier': secondScoreMultiplier,
+					'thirdDartMultiplier': thirdScoreMultiplier,
+					'playersInMatch': playersInMatch
 				});
 				executePost(window.location.pathname + '/throw', data, 'application/json',
 					function(response) {
@@ -122,10 +133,10 @@ block content
 			tbody
 				tr(class='row')
 					td(colspan='3')
-					td(colspan='2'): label(id='first' text='0')
-					td(colspan='2'): label(id='second' text='0')
-					td(colspan='2'): label(id='third' text='0')
-					td(colspan='2'): button(id='submitScoreButton' type='button' style='line-height:1.5' class='btn-score btn-info btn-lg btn-block' data-match=match) Submit
+					td(colspan='2'): label(id='first' text='0' data-multiplier='1')
+					td(colspan='2'): label(id='second' text='0' data-multiplier='1')
+					td(colspan='2'): label(id='third' text='0' data-multiplier='1')
+					td(colspan='2'): button(id='submitScoreButton' type='button' style='line-height:1.5' class='btn-score btn-info btn-lg btn-block' data-match-id=match.id data-current-player-id=match.current_player_id data-players-in-match=match.player2match) Submit
 					td(colspan='2')
 						button(id='undoButton' type='button' class='btn-score btn-info btn-lg btn-block')
 							span(class='glyphicon glyphicon-arrow-left' style='line-height:1.5' aria-hidden='true')
@@ -142,75 +153,75 @@ block content
 						td(colspan=length)
 							label(id='label_player_name_' + player.name)= player.name
 				tr(class='throw_buttons row')
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block' title='0') Miss<br/>&nbsp;
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block' title='20') 20<br/>.
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block' title='19') 19<br/>.
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block' title='18') 18<br/>.
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block' title='17') 17<br/>.
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block btn-double' title='40') 20<br/>..
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block btn-double' title='38') 19<br/>..
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block btn-double' title='36') 18<br/>..
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block btn-double' title='34') 17<br/>..
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block btn-triple' title='60') 20<br/>...
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block btn-triple' title='57') 19<br/>...
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block btn-triple' title='54') 18<br/>...
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block btn-triple' title='51') 17<br/>...
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block' title='0' data-multiplier='1') Miss<br/>&nbsp;
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block' title='20' data-multiplier='1') 20<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block' title='19' data-multiplier='1') 19<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block' title='18' data-multiplier='1') 18<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block' title='17' data-multiplier='1') 17<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block btn-double' title='40' data-multiplier='2') 20<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block btn-double' title='38' data-multiplier='2') 19<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block btn-double' title='36' data-multiplier='2') 18<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block btn-double' title='34' data-multiplier='2') 17<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block btn-triple' title='60' data-multiplier='3') 20<br/>...
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block btn-triple' title='57' data-multiplier='3') 19<br/>...
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block btn-triple' title='54' data-multiplier='3') 18<br/>...
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block btn-triple' title='51' data-multiplier='3') 17<br/>...
 				tr(class='throw_buttons row')
 					td(rowspan='2' style='height:100%')
-						button(type='button' style='height:100%' class='btn-score btn-info btn-lg btn-block btn-double' title='25') Bull<br/>.
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block' title='16') 16<br/>.
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block' title='15') 15<br/>.
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block' title='14') 14<br/>.
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block' title='13') 13<br/>.
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='32') 16<br/>..
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='30') 15<br/>..
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='28') 14<br/>..
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='26') 13<br/>..
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='48') 16<br/>...
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='45') 15<br/>...
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='42') 14<br/>...
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='39') 13<br/>...
+						button(type='button' style='height:100%' class='btn-score btn-info btn-lg btn-block btn-double' title='25' data-multiplier='1') Bull<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block' title='16' data-multiplier='1') 16<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block' title='15' data-multiplier='1') 15<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block' title='14' data-multiplier='1') 14<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block' title='13' data-multiplier='1') 13<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='32' data-multiplier='2') 16<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='30' data-multiplier='2') 15<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='28' data-multiplier='2') 14<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='26' data-multiplier='2') 13<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='48' data-multiplier='3') 16<br/>...
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='45' data-multiplier='3') 15<br/>...
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='42' data-multiplier='3') 14<br/>...
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='39' data-multiplier='3') 13<br/>...
 				tr(class='throw_buttons row')
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='12') 12<br/>.
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='11') 11<br/>.
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='10') 10<br/>.
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='9') 9<br/>.
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='24') 12<br/>..
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='22') 11<br/>..
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='20') 10<br/>..
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='18') 9<br/>..
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='36') 12<br/>...
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='33') 11<br/>...
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='30') 10<br/>...
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='27') 9<br/>...
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='12' data-multiplier='1') 12<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='11' data-multiplier='1') 11<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='10' data-multiplier='1') 10<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='9' data-multiplier='1') 9<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='24' data-multiplier='2') 12<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='22' data-multiplier='2') 11<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='20' data-multiplier='2') 10<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='18' data-multiplier='2') 9<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='36' data-multiplier='3') 12<br/>...
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='33' data-multiplier='3') 11<br/>...
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='30' data-multiplier='3') 10<br/>...
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='27' data-multiplier='3') 9<br/>...
 				tr(class='throw_buttons row')
 					td(rowspan='2' style='height:100%')
 						button(type='button' style='height:100%' class='btn-score btn-info btn-lg btn-block btn-triple' title='50') Bull<br/>..
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='8') 8<br/>.
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='7') 7<br/>.
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='6') 6<br/>.
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='5') 5<br/>.
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='16') 8<br/>..
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='14') 7<br/>..
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='12') 6<br/>..
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='10') 5<br/>..
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='24') 8<br/>...
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='21') 7<br/>...
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='18') 6<br/>...
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='15') 5<br/>...
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='8' data-multiplier='1') 8<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='7' data-multiplier='1') 7<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='6' data-multiplier='1') 6<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='5' data-multiplier='1') 5<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='16' data-multiplier='2') 8<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='14' data-multiplier='2') 7<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='12' data-multiplier='2') 6<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='10' data-multiplier='2') 5<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='24' data-multiplier='3') 8<br/>...
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='21' data-multiplier='3') 7<br/>...
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='18' data-multiplier='3') 6<br/>...
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='15' data-multiplier='3') 5<br/>...
 				tr(class='throw_buttons row')
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='4') 4<br/>.
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='3') 3<br/>.
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='2') 2<br/>.
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='1') 1<br/>.
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='8') 4<br/>..
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='6') 3<br/>..
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='4') 2<br/>..
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='2') 1<br/>..
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='12') 4<br/>...
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='9') 3<br/>...
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='6') 2<br/>...
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='3') 1<br/>...
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='4' data-multiplier='1') 4<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='3' data-multiplier='1') 3<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='2' data-multiplier='1') 2<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='1' data-multiplier='1') 1<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='8' data-multiplier='2') 4<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='6' data-multiplier='2') 3<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='4' data-multiplier='2') 2<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='2' data-multiplier='2') 1<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='12' data-multiplier='3') 4<br/>...
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='9' data-multiplier='3') 3<br/>...
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='6' data-multiplier='3') 2<br/>...
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='3' data-multiplier='3') 1<br/>...
 
 	div(class='btn-group')
 		button(type='button' class='btn btn-primary btn-block dropdown-toggle' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false') Advanced
