--- a/views/matches.pug
+++ b/views/matches.pug
@@ -7,7 +7,6 @@ block scripts
 				window.location.href = '/match/' + $(this).closest('tr').find('th').text();
 			});
 			$('.btn-view-results').click(function() {
-				console.log($(this));
 				window.location.href = '/match/' + $(this).closest('tr').find('th').text() + '/results';
 			});
 		});
@@ -38,18 +37,15 @@ block content
 						td= match.starting_score
 						td
 						if match.is_finished
-							td= match.winner.name
+							td= players[match.winner_id].name
 						else
 							td -
 						td
 							table(class='table table-striped table-bordered')
 								tbody
 									each player in match.players
-										tr
-											td= player.name
+										tr: td= player.name
 						if !match.is_finished
-							td
-								button(type='button' id='continueMatchButton' class='btn btn-primary btn-block btn-continue-match') Continue
+							td: button(type='button' id='continueMatchButton' class='btn btn-primary btn-block btn-continue-match') Continue
 						else
-							td
-								button(type='button' class='btn btn-primary btn-block btn-view-results') View
+							td: button(type='button' class='btn btn-primary btn-block btn-view-results') View
