--- a/views/results.pug
+++ b/views/results.pug
@@ -5,31 +5,33 @@ block content
 
 	p.
 		ID: #{match.id} <br>
-		Started: #{match.startTime.toISOString()} <br>
-		Finished: #{match.endTime === undefined ? '' : match.endTime.toISOString()} <br>
-		Duration: #{((match.endTime - match.startTime) / (60 * 1000)).toFixed(1)} minutes <br>
+		Started: #{match.created_at} <br>
+		Finished: #{match.end_time === undefined ? '' : match.end_time} <br>
+		Duration: #{((match.end_time - match.created_at) / (60 * 1000)).toFixed(1)} minutes <br>
 		Stakes: #{match.stake === "" ? "None" : match.stake}
 	
 	table(class='table table-striped table-bordered')
 		thead
 			tr
-				th Players
+				th Player
+				th Visits
 				th First 9 PPD
 				th PPD
 				th Winner
 		tbody
-			each player in match.players
+			each player in players
 				tr
 					td= player.name
+					td= player.visits
 					td= player.first9ppd
-					td= player.ppd
-					if match.winner !== undefined && player.name === match.winner.name
+					td= player.ppd.toFixed(2)
+					if match.winner_id !== undefined && player.id === match.winner_id
 						td
 							span(class='glyphicon glyphicon-ok' aria-hidden='true')
 					else
 						td
 	p.
-		Starting score was #{match.startingScore}, and a total of #{match.scores.length * 3} darts were thrown by #{match.players.length} players
+		Starting score was #{match.starting_score}, and a total of #{scores.length * 3} darts were thrown by #{players.length} players
 
 	table(class='table table-striped table-bordered')
 		thead
@@ -41,11 +43,11 @@ block content
 				th Total
 				th PPD
 		tbody
-			each throws in match.scores
+			each throws in scores
 				tr
-					td= throws.player.name
-					td= throws.firstDart
-					td= throws.secondDart
-					td= throws.thirdDart
-					td= throws.firstDart + throws.secondDart + throws.thirdDart
-					td= ((throws.firstDart + throws.secondDart + throws.thirdDart) / 3).toFixed(2)
+					td= players[throws.player_id].name
+					td= throws.first_dart
+					td= throws.second_dart
+					td= throws.third_dart
+					td= throws.first_dart + throws.second_dart + throws.third_dart
+					td= ((throws.first_dart + throws.second_dart + throws.third_dart) / 3).toFixed(2)
