--- a/views/results.pug
+++ b/views/results.pug
@@ -31,7 +31,7 @@ block content
 					else
 						td
 	p.
-		Starting score was #{match.starting_score}, and a total of #{scores.length * 3} darts were thrown by #{players.length} players
+		Starting score was #{match.starting_score}, and a total of #{scores.length * 3} darts were thrown by #{Object.keys(players).length} players
 
 	table(class='table table-striped table-bordered')
 		thead
